--- a/Python/Python3 网络爬虫/第三章 爬虫开发基础.md
+++ b/Python/Python3 网络爬虫/第三章 爬虫开发基础.md
@@ -1,4 +1,4 @@
-# 第三章 爬虫开发基础
+# 爬虫开发基础
 ## HTTP 与 HTTPS
 1. HTTP(Hyper Text Transfer Protocol，超文本传输协议)是一个客户端和服务器端请求和应答的标准(TCP)。客户端是终端用户，服务器端是网站。
 2. 通过使用 Web 浏览器、网络爬虫或者其他工具，客户端发起到服务器上指定窗口(默认端口是80)的 HTTP 请求，这个客户端叫做用户代理(User Agent)。
